    * 4218 FIX: Disabling replication with a site did not clear the changes for this site (1.4.0i3 regression)
    * 4221 FIX: Fixed "analyse parameters" page for services with umlauts in names
    * 4224 FIX: Improved exception handling during WATO slave site activation

    Notifications:
    * 4197 FIX: Fix sending notification to global fallback email address

    BI:
    * 4009 FIX: Business intelligence: Multihost aggregations are no longer broken after a core restart

    Reporting & Availability:
    * 3652 FIX: Unbreak PDF exports...
    * 4267 FIX: PDF export of filtered alert statistics view was always empty

    Event Console:
    * 4153 FIX: Fix forwarding notifications to Check_MK when no contact groups are set
    * 4155 FIX: Do not perform actions on events if overflow limit is active...
    * 4156 FIX: Fix off-by-one error in EC limit handling...
    * 4199 FIX: Fix detection of replication mode if EC is distributed...
    * 4200 FIX: Fix computation of Event Console performance snapin in distributed mode...

    HW/SW-Inventory:
    * 4258 FIX: snmp_extended_info: fixed undefined variable


1.4.0i3:
    Core & Setup:
    * 3978 FIX: mkbackup: Fixed backup to some CIFS shares ([Errno 13] Permission denied) '...')...
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 3988 Windows agent: new global option disabled_sections...
    * 3989 Logwatch patterns: now able to change state of context lines...
    * 4087 netgear_fans, netgear_powersupplies, netgear_temp: new checks for Netgear Switches which support the FASTPATH-BOXSERVICES-PRIVATE MIB
    * 4089 oracle_tablespaces: file online states are now configurable if size info is available
    * 4096 avaya_chassis_card, avaya_chassis_ps, avaya_chassis_temp: New checks for Avaya devices...
    * 4094 apc_rackpdu_power: now detects all phases or banks connected to this pdu
            NOTE: Please refer to the migration notes!