@@ -1,0 +1,12 @@
+Title: Nagios: Added missing variable MICROTIME to notification contexts
+Level: 1
+Component: notifications
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.4.0i3p1
+Date: 1485331748
+
+When using the CMC, the MICROTIME context variable is always present.
+This fixes an error when using the pushover notification plugin with the
+Nagios core.
